Fix presentation on mobile, with flower adaptable

--- a/css/styl/general.styl
+++ b/css/styl/general.styl
@@ -48,3 +48,6 @@ header
 	.right_corner
 		width: 123px;
 		height: 30px;
+
+	@media screen and (max-width: 400px)
+		display: none;
