--- a/css/styl/presentation.styl
+++ b/css/styl/presentation.styl
@@ -4,12 +4,10 @@
         flex-direction: row;
         justify-content: space-between;
         width: auto;
-        // height: 1080px;
 
         @media screen and (max-width: 880px)
             display: block;
             height: auto;
-            // height: 720px;
 
         .sheet_image
             width: 220px;
@@ -55,16 +53,18 @@
                     color: rgb(20, 20, 20)
                     margin: 0;
 
-                    @media screen and (max-width: 800px)
+                    @media screen and (max-width: 480px)
                         font-size: 92px;
+                    @media screen and (max-width: 340px)
+                        font-size: 80px;    
 
                 h3
-                    margin: 0px 32px;
+                    margin: 32px 32px;
                     font-size: 36px;
                     @media screen and (max-width: 800px)
-                        font-size: 28px;
-                    @media screen and (max-width: 500px)
-                        margin: 0px 16px;
+                        font-size: 24px;
+                    @media screen and (max-width: 340px)
+                        margin: 16px 16px;
 
                 .google_play
                     margin: 64px auto;
@@ -77,7 +77,6 @@
 
                     @media screen and (max-width: 520px)
                         margin: 64px auto;
-
                         width: 192px;
 
             .illustration
@@ -97,6 +96,12 @@
         height: auto;
         margin-left: auto;
         margin-right: 0;
+        margin-bottom: -6px; // ugly fixh
+        margin-top: 22px;
+
+        // @media screen and (max-width: 580px)
+        //     margin-top: 24px;
+
         img
             width: 100%;
             height: 100%;
